# tipe-src

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
app/: chainness_small.geojson  db_compile.cpp  loader.hpp  main.cpp  main.hpp
app/benchmarks/: benchmarks.cpp  benchmarks.hpp  out.csv
demo/: gfx.cpp  gfx.hpp  main.cpp
ext/: loader.hpp
ext/gfx/: gfx.cpp  gfx.hpp
gfx/: gfx.cpp
rtree/: constants.hpp  rect.hpp  rtree.cpp  rtree.hpp
rtree/rect/: rect.cpp  rect.hpp
rtree/split_algorithms/: growable_rect.hpp  split_algorithms.cpp  split_algorithms.hpp
src/: rect.cpp  rect.hpp  rtree.cpp  rtree.hpp
src/split_algorithms/: exp.cpp  split_algorithm.hpp  split_algorithms.hpp
test/: main.cpp  main.hpp
